fix: spacing issues

--- a/packages/excalidraw/components/TTDDialog/TTDDialog.scss
+++ b/packages/excalidraw/components/TTDDialog/TTDDialog.scss
@@ -117,7 +117,7 @@ $verticalBreakpoint: 861px;
 
   .ttd-dialog-triggers {
     border-bottom: 1px solid var(--color-surface-high);
-    margin-bottom: 2.5rem;
+    margin-bottom: 1rem;
     padding-inline: 2.5rem;
 
     @media screen and (max-width: $verticalBreakpoint) {
@@ -202,6 +202,10 @@ $verticalBreakpoint: 861px;
 
     &--chat-only {
       grid-template-columns: 1fr;
+
+      .invisible {
+        display: none;
+      }
 
       .ttd-dialog-chat-panel {
         @media screen and (max-width: $verticalBreakpoint) {
